# vortex-cfd

./: .gitignore  LICENSE  LLM.md  README.md  explanation.md  pyproject.toml  requirements.txt  run-cfd.sh  setup.sh
.claude/: settings.local.json
Test STL/: input_cap_2.stl  output_cap_3.stl  output_cap_4.stl  output_wall.stl
tests/: conftest.py  smoke_test.sh  test_case_builder.py  test_env_check.py  test_scaling.py  test_waveform.py
vortex_cfd/: __main__.py  case_builder.py  cli.py  env_check.py  patch_labeller.py  runner.py  scaling.py  waveform.py
vortex_cfd/templates/: Allrun.j2
vortex_cfd/templates/0/: U.j2  p.j2
vortex_cfd/templates/constant/: transportProperties.j2  turbulenceProperties.j2
vortex_cfd/templates/system/: blockMeshDict.j2  controlDict.j2  decomposeParDict.j2  fvSchemes.j2  fvSolution.j2  meshQualityDict.j2  snappyHexMeshDict.j2  surfaceFeatureExtractDict.j2
